# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,12 @@
 import { Router, type IRouter } from "express";
-import healthRouter from "./health";
+import healthRouter from "./health.js";
+import openaiRouter from "./openai/index.js";
+import bluejRouter from "./bluej/index.js";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use("/openai", openaiRouter);
+router.use("/bluej", bluejRouter);
 
 export default router;
